# BinaryDatabase

./: .gitignore  CMakeLists.txt  ColumnInfo.cpp  ColumnInfo.h  DataCell.cpp  DataCell.h  DataRow.cpp  DataRow.h  DataType.cpp  DataType.h  DataTypeIO.cpp  DataTypeIO.h  Database.cpp  Database.h  DatabaseInfo.cpp  DatabaseInfo.h  LICENSE  Readme.md  TODOS.h  TableInfo.cpp  TableInfo.h  test-context.cpp  test-students.cpp  test.cpp  utils.cpp  utils.h
Context/: Argument.cpp  Argument.h  Context.cpp  Context.h  Result.cpp  Result.h  params.cpp  params.h  utils.cpp  utils.h
Context/Functions/: Compare.cpp  Data.cpp  Eval.cpp  Eval.h  Functions.cpp  Functions.h  Select.cpp  Table.cpp
Data/: Data.h  DataCell.cpp  DataCell.h  DataRow.cpp  DataRow.h  DataTable.cpp  DataTable.h  DataValue.cpp  DataValue.h
MetaInfo/: ColumnInfo.cpp  ColumnInfo.h  DataType.cpp  DataType.h  DataTypeIO.cpp  DataTypeIO.h  DatabaseInfo.cpp  DatabaseInfo.h  MetaInfo.h  RowInfo.cpp  RowInfo.h  TableInfo.cpp  TableInfo.h
test/: test-bookstore.cpp  test-context.cpp  test-students.cpp  test.cpp
